# confidential-computing-tsa

./: .gitignore  .markdownlint.json  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.githooks/: install-hooks.sh  pre-commit  pre-push
.github/issues/: phase-1-immutable-core-model.md  phase-2-operations-overhaul.md  phase-3-failure-modes-and-threat-model.md
.github/workflows/: azure-deploy.yml  claude-code-review.yml  claude-diagnose-workflow-failure.yml  claude.yml  deploy-azure.yml  docker-build-push.yml  pages.yml  pr-tests.yml  review-code-content.yml  review-coverage-evaluator.yml  review-crypto.yml  review-design.yml  review-docs.yml  review-rfc-standards.yml  review-standards.yml  review-test.yml  weekly-review-crypto.yml  weekly-review-security-news.yml  weekly-review-standards.yml  (+1 more)
cvm/: Cargo.toml
cvm/proto/: README.md
cvm/src/: attestation.rs  lib.rs  main.rs  protocol.rs  signed_attrs.rs  signing.rs  time.rs  tstinfo.rs
docs/: 01-architecture-overview.md  02-confidential-computing-and-time.md  03-quantum-safe-threshold-crypto.md  04-failure-modes-and-recovery.md  05-operations-and-deployment.md  06-rfc3161-compliance.md  07-threat-model.md  08-throughput-and-scaling.md  09-enclave-interface.md  10-platform-integrity-and-compliance.md
infra/: .terraform.lock.hcl  cloud-init.yaml  main.tf  network.tf  outputs.tf  variables.tf  versions.tf  vm.tf
wrapper/: Cargo.toml
wrapper/src/: cms.rs  config.rs  lib.rs  main.rs  response.rs  rfc3161.rs  vsock_client.rs
(+4 files in other folders)
