[package]
name = "cvm-core"
version = "0.1.0"
edition = "2021"
description = "CC-TSA Confidential VM core: minimal signing oracle for RFC 3161 timestamps"

[dependencies]
p384 = { version = "0.13", features = ["ecdsa"] }
ecdsa = { version = "0.16", features = ["signing", "verifying"] }
sha2 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }

[dev-dependencies]
hex = "0.4"
